--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   english_words: ^3.1.5
   transparent_image: ^1.0.0
+  cached_network_image: ^2.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
