Animate a widget across screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   english_words: ^3.1.5
   transparent_image: ^1.0.0
   cached_network_image: ^2.4.1
+  sentry_flutter: ^4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
