--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   transparent_image: ^1.0.0
   cached_network_image: ^2.4.1
   sentry_flutter: ^4.0.0
+  http: ^0.12,2
 dev_dependencies:
   flutter_test:
     sdk: flutter
