--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sentry_flutter: ^4.0.0
   http: ^0.12,2
   shared_preferences: ^0.5.12+4
+  video_player: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
