--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   http: ^0.12,2
   shared_preferences: ^0.5.12+4
   video_player: ^1.0.1
+  camera: ^0.5.8+17
+  path: ^1.7.0
+  path_provider: ^1.6.24
 dev_dependencies:
   flutter_test:
     sdk: flutter
